sw_esp32/static_analysis/cppcheck.txt
Cppcheck 2.13.0


Checking ../plant_boss/drivers/bh1750fvi.c ...
../plant_boss/drivers/bh1750fvi.c:60:66: error: Array 'buf_rx[2]' accessed at index 2, which is out of bounds. [arrayIndexOutOfBounds]
    light = (float)(((uint16_t)buf_rx[0] << 8) | (uint16_t)buf_rx[2]) / 1.2;
                                                                 ^


cppcheck finished

[../plant_boss/drivers/bh1750fvi.c:13] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-8.4]
[../plant_boss/drivers/bh1750fvi.c:14] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-8.4]
[../plant_boss/drivers/bh1750fvi.c:16] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-8.9]
[../plant_boss/drivers/bh1750fvi.c:60] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-10.8]
[../plant_boss/drivers/bh1750fvi.c:21] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-11.4]
[../plant_boss/drivers/bh1750fvi.c:27] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-15.5]
[../plant_boss/drivers/bh1750fvi.c:43] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-15.5]
[../plant_boss/drivers/bh1750fvi.c:23] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-17.3]
[../plant_boss/drivers/bh1750fvi.c:39] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-17.3]
[../plant_boss/drivers/bh1750fvi.h:12] (style) misra violation (use --rule-texts=<file> to get proper output) (Undefined) [misra-c2012-21.6]
Checking /workspaces/plant_boss/sw_esp32/plant_boss/drivers/bh1750fvi.c.dump...
Checking /workspaces/plant_boss/sw_esp32/plant_boss/drivers/bh1750fvi.c.dump, config ...

MISRA rules violations found:
	Undefined: 10

MISRA rules violated:
	misra-c2012-8.4 (-): 2
	misra-c2012-8.9 (-): 1
	misra-c2012-10.8 (-): 1
	misra-c2012-11.4 (-): 1
	misra-c2012-15.5 (-): 2
	misra-c2012-17.3 (-): 2
	misra-c2012-21.6 (-): 1


misra finished

